--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack-dev-server -d --progress --colors --display-error-details --inline",
     "test": "mocha-webpack",
     "test:watch": "mocha-webpack --watch",
-    "build": "rimraf publid/dist && webpack --progress --profile --bail",
+    "build": "rimraf public/dist && webpack --progress --profile --bail",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
