--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "webpack-dev-server -d --progress --colors --display-error-details --inline",
     "test": "mocha-webpack",
     "test:watch": "mocha-webpack --watch",
-    "build": "rimraf public/dist && webpack --progress --profile --bail",
-    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+    "delete" : "rimraf public/dist/js && rimraf public/dist/css && rimraf public/dist/index.html",
+    "build": "yarn run delete && webpack --progress --profile --bail",
+    "lint:app": "tslint --fix -c tslint.json --type-check src/**/*.ts",
+    "lint:e2e": "tslint --fix -c tslint.json --type-check e2e/**/*.ts",
+    "lint": "yarn run lint:app && yarn run lint:e2e",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
@@ -27,6 +30,7 @@
     "@types/lodash": "^4.14.48",
     "angular2-template-loader": "^0.6.0",
     "bulma": "^0.2.3",
+    "codelyzer": "^2.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "es6-promise": "^3.0.2",
