--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack-dev-server -d --progress --colors --display-error-details --inline",
     "test": "mocha-webpack",
     "test:watch": "mocha-webpack --watch",
-    "delete" : "rimraf public/dist/js && rimraf public/dist/css && rimraf public/dist/index.html",
+    "delete": "rimraf public/dist/js && rimraf public/dist/css && rimraf public/dist/index.html",
     "build": "yarn run delete && webpack --progress --profile --bail",
     "lint:app": "tslint --fix -c tslint.json --type-check src/**/*.ts",
     "lint:e2e": "tslint --fix -c tslint.json --type-check e2e/**/*.ts",
@@ -52,18 +52,27 @@
     "zone.js": "0.7.6"
   },
   "devDependencies": {
+    "@types/mocha": "^2.2.38",
+    "@types/power-assert": "^1.4.29",
+    "@types/sinon": "^1.16.34",
     "bulma-loader": "^1.0.1",
     "concurrently": "^3.1.0",
     "css-loader": "^0.26.1",
     "del": "^2.2.2",
     "html-webpack-plugin": "^2.26.0",
+    "jsdom": "^9.9.1",
+    "mocha": "^3.2.0",
+    "mocha-webpack": "^0.7.0",
     "postcss-cssnext": "^2.7.0",
+    "power-assert": "^1.4.2",
     "protractor": "^5.0.0",
     "run-sequence": "^1.2.2",
+    "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.4",
     "vinyl-named": "^1.1.0",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-node-externals": "^1.5.4"
   }
 }
