--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
+    "ts-node": "^2.0.0",
     "typescript": "^2.1.4",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.13.2",
