--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/angular-material": "^1.1.43",
     "@types/core-js": "^0.9.35",
     "@types/lodash": "^4.14.48",
+    "angular-in-memory-web-api": "^0.2.4",
     "angular2-template-loader": "^0.6.0",
     "bulma": "^0.2.3",
     "codelyzer": "^2.0.0-beta.4",
